# cat_eye

./: .gitignore  CMakeLists.txt  Makefile  cmk  mk  mk_release  mkr
module/cap/: CMakeLists.txt  main.cpp
module/cap/buffer/: md_camerabuf.cpp
module/cap/camera/: md_camerahal.h
module/cap/h264_enc_dec/: md_mpi_enc_api.c
module/cap/process/: md_display_process.cpp  md_encoder_process.h
module/updater/: CMakeLists.txt  updater.cpp  updater.h
module/updater/display/: display.cpp  display.h  font_bitmap.h
module/updater/partition/: partition.cpp  partition.h
module/updater/verify/crc/: crc32.cpp  crc32.h
module/updater/verify/md5/: md5sum.cpp  md5sum.h
module/updater/wget/: httpd.cpp  httpd.h
module/video/: CMakeLists.txt  main.cpp  video_server.cpp  video_server.h
module/video/buffer/: camerabuf.cpp  md_camerabuf.h
module/video/camera/: camera_factory.h  camerahal.h  md_camerahal.cpp
module/video/h264_enc_dec/: md_mpi_enc_api.c  mpi_enc_api.c  mpi_enc_api.h
module/video/process/: display_process.cpp  display_process.h  face_process.cpp  face_process.h  md_display_process.cpp  md_display_process.h  md_encoder_process.cpp  md_encoder_process.h
src/: CMakeLists.txt  Makefile  main.c
src/app/: CMakeLists.txt  Makefile  avi_encode.c  avi_encode.h  config.c  config.h  debug.c  debug.h  externfunc.c  externfunc.h  main.c  media_muxer.c  media_muxer.h  my_audio.c  my_audio.h  my_echo.c  my_echo.h  my_face.c  my_face.h  my_gpio.c  my_gpio.h  my_ntp.c  my_ntp.h  my_update.c  my_update.h  my_video.c  my_video.h  protocol.c  protocol.h  protocol_hardcloud.c  protocol_singlechip.c  protocol_talk.c  protocol_video.c  protocol_video.h  proximity_detector.c  proximity_detector.h  sensor_detector.c  sensor_detector.h  sql_handle.c  sql_handle.h  (+2 more)
src/app/face/: CMakeLists.txt  common.h  face.cpp  face_service.cpp  face_service.h  my_face.c  my_face.h
src/app/face/camera/: cif_camera.cpp
src/app/face/face/: face_evaluator.h  face_recognizer.cpp  face_recognizer.h
src/app/face/ipc/: messenger.h
src/app/face/process/: display_process.cpp  encoder.cpp  process_factory.h  uvc_process.h
src/app/face/rdface/: CMakeLists.txt  rd_face.c  rd_face.h  video_ion_alloc.c
src/app/face/rkface/: CMakeLists.txt  face.cpp  face_service.cpp  face_service.h
src/app/rdface/: CMakeLists.txt  rd_face.c  rd_face.h  readsense_face_sdk.h  video_ion_alloc.c  video_ion_alloc.h
src/app/ucpaas/: CMakeLists.txt  linux_sdk_demo.c  linux_sdk_demo.h  protocol_ucpaas.c  ucpaas.c  ucpaas.h
src/app/udp_talk/: CMakeLists.txt  share_memory.c  share_memory.h  udp_client.c  udp_client.h  udp_talk_parse.c  udp_talk_parse.h  udp_talk_protocol.c  udp_talk_protocol.h  udp_talk_transport.c  udp_talk_transport.h
src/app/video/: CMakeLists.txt  my_video.c  my_video.h  stateMachine.c  stateMachine.h  utils.h  video.cpp  video.h  video_server.cpp  video_server.h
src/app/video/buffer/: camerabuf.cpp  camerabuf.h
src/app/video/camera/: camerahal.cpp  camerahal.h
src/app/video/h264_enc_dec/: h264_split.c  mpi_dec_api.c  mpi_dec_api.h  mpi_enc_api.c  mpi_enc_api.h  mpp_dec_test.cpp
src/app/video/lcd/: lcd.c  lcd.h
src/app/video/process/: cammer_process.cpp  cammer_process.h  display_process.cpp  display_process.h  encoder_process.cpp  encoder_process.h  face_process.cpp  face_process.h
src/drivers/: CMakeLists.txt  Makefile  ipc_server.c  ipc_server.h  jpeg_enc_dec.c  jpeg_enc_dec.h  json_dec.c  json_dec.h  linklist.c  linklist.h  my_mixer.c  my_mixer.h  playwav.c  playwav.h  qrcode.c  qrenc.c  qrenc.h  queue.c  queue.h  share_memory.c  share_memory.h  sqlite.c  sqlite.h  thread_helper.c  thread_helper.h  timer.c  timer.h  uart.c  uart.h
src/drivers/avilib/: CMakeLists.txt  avilib.c  platform.h
src/drivers/iniparser/: CMakeLists.txt  dictionary.c  iniparser.c
src/drivers/mp4_muxer/: CMakeLists.txt  mp4_muxer.c  mp4_muxer.h
src/gui/: CMakeLists.txt  Makefile  commongdi.c  commongdi.h  form_base.c  form_base.h  form_idcs.h  form_main.c  form_main.h  form_monitor.c  form_password.c  form_poweroff.c  form_setting.c  form_setting_alarm.c  form_setting_brightness.c  form_setting_capture_video.c  form_setting_date.c  form_setting_doorbell.c  form_setting_face.c  form_setting_local.c  form_setting_mute.c  form_setting_pir_strength.c  form_setting_pir_timer.c  form_setting_power.c  form_setting_qrcode.c  form_setting_rings.c  form_setting_rings_volume.c  form_setting_screen.c  form_setting_sleeptime.c  form_setting_store.c  form_setting_talk.c  form_setting_time.c  form_setting_timer.c  form_setting_update.c  form_setting_wifi.c  form_topmessage.c  form_update.c  form_videlayer.c  form_videlayer.h  form_video.c  (+7 more)
src/gui/my_controls/: CMakeLists.txt  Makefile  ctrlclass.h  internals.h  my_battery.c  my_battery.h  my_button.c  my_button.h  my_controls.h  my_dialog.c  my_dialog.h  my_scroll.c  my_scroll.h  my_static.c  my_static.h  my_status.c  my_status.h  my_title.c  my_title.h  zorder.h
src/gui/my_controls/my_scrollview/: list.h  listmodel.h  my_scrollview.c  my_scrollview.h  my_scrollview_impl.h
src/hal/: CMakeLists.txt  Makefile  gpio-rv1108.h  hal_battery.c  hal_battery.h  hal_gpio.c  hal_gpio.h  hal_sensor.c  hal_sensor.h  hal_uart.c  hal_uart.h  hal_watchdog.c  hal_watchdog.h
src/hal/hal_face/: CMakeLists.txt  Config.in  face.cpp  face_service.cpp  face_service.h
src/hal/hal_face/camera/: camera.h  camera_factory.h  cif_camera.h  isp_camera.cpp
src/hal/hal_face/face/: face_db_manager.cpp  face_detector.cpp  face_feature.h  face_recognizer.cpp  face_recognizer.h  live_detector.cpp  live_detector.h
src/hal/hal_face/process/: encoder.h  (+3 more)
src/hal/hal_mixer/: CMakeLists.txt  aconfig.h  aplay.c  arecord.c  hal_mixer.h  limits.c  pcm.c  tinycap.c  tinymix.c  tinyplay.c  tinyplay.h
src/hal/hal_video/: CMakeLists.txt  Makefile  rv_video.cpp  rv_video.h
src/wireless/: CMakeLists.txt  iwconfig.c  iwlib.c  iwlib.h  iwlist.c  my_dns.c  my_dns.h  my_http.c  my_http.h  my_mqtt.c  my_mqtt.h  remotefile.c  remotefile.h  tcp_client.c  tcp_client.h  udp_server.c  udp_server.h  wireless.h
(+145 files in other folders)
